[gd_scene load_steps=2 format=3 uid="uid://clltujdqqvo6p"]

[ext_resource type="Script" path="res://ui.gd" id="1_j1kci"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1kci")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="SteamAppsItemList" type="ItemList" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 2
same_column_width = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AppNameLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
editable = false

[node name="AppIdLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
editable = false

[node name="OpenGameDirectoryButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Open game directory"

[node name="OpenCompatDataButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Open compatdata"
